Adding scvmm, cleaning up layouting

--- a/src/asciidoc/infrastructure/clouds/clouds.adoc
+++ b/src/asciidoc/infrastructure/clouds/clouds.adoc
@@ -15,4 +15,4 @@ include::softlayer.adoc[]
 include::vcloudair.adoc[]
 include::virtualbox.adoc[]
 include::xen.adoc[]
-include::scmmm.adoc[]
+include::scvmm.adoc[]
